almost done sussing?

--- a/A M O G U S/GAME.html
+++ b/A M O G U S/GAME.html
@@ -1,105 +1,106 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="GAME.css">
-    <title>O hře Among Us</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="HOME.html"><img src="Images/LilAmogus.png"></a>
-        </nav>
-        <h1><pre>H  R  A         A   M   O   N   G         U   S</pre></h1>
-    </header>
-    <main>
-        <div class="slogan">
-            <p>
-                <span>Odhalte zrádce, ochrantě posádku</span>
-                Ve světě Among Us, plném nebezpečí a věčné nedůvěry, musíte najít odvahu spoléhat se na ostatní, abyste odhalili zrádce a ochránili svou posádku před temnými intrikami.
-            </p>
-        </div>
-        <div class="about-part">
-            <div class="about-text">
-                <p>   
-                    <span class="red">Among Us je populární sociální dedukční hra,</span> která je určena pro skupiny hráčů
-                    o počtu 4-15. Ve hře je každému hráči náhodně přidělena role podvodníka, nebo role člena posádky.
-                </p>
-                <ul>
-                    <li>
-                        <span class="red">Podvodníci mají za úkol zůstat utajeni a sabotovat úkoly posádky.</span>
-                        Jejich cílem je zavraždit všechny členy posádky a nebýt chyceni.
-                        Musí strategicky plánovat své útoky a zároveň se vyhýbat podezření ostatních hráčů.
-                    </li>
-                    <li>
-                        <span class="red">Členové posádky mají za úkol vykonat všechny požadované úkoly na lodi a odhalit podvodníky.</span>
-                        Aby přežili, musí spolupracovat, komunikovat a hlasovat o podezřelých hráčích na základě pozorování a dedukce.
-                        Důvěra mezi členy posádky je klíčová k vítězství
-                    </li>
-                </ul>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="Images/LilAmogus.png" type="image/x-icon">
+        <link rel="stylesheet" href="GAME.css">
+        <title>O hře Among Us</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a href="HOME.html"><img src="Images/LilAmogus.png"></a>
+            </nav>
+            <h1><pre>H  R  A         A   M   O   N   G         U   S</pre></h1>
+        </header>
+        <main>
+            <div class="slogan">
                 <p>
-                    <span class="red">Among Us je napínavá hra plná tajemství,</span> podezření a strategie, která vyžaduje dobré deduktivní schopnosti a
-                    schopnost spolupracovat s ostatními hráči.
+                    <span>Odhalte zrádce, ochrantě posádku</span>
+                    Ve světě Among Us, plném nebezpečí a věčné nedůvěry, musíte najít odvahu spoléhat se na ostatní, abyste odhalili zrádce a ochránili svou posádku před temnými intrikami.
                 </p>
             </div>
-            <img src="Images/among-us-theme.jpg">
-        </div>
-        <div class="grid-container">
-            <div class="maps">
-                <h2 class="red">Hratelné mapy</h2>
-                <p>
-                    Hra se odehrává na jedné ze čtyř map:
-                </p>
-                <a href="MAPS.html"><img src="Images/map-name-skeld.jpg"></a>
-                <a href="MAPS.html"><img src="Images/map-name-polus.png"></a>
-                <a href="MAPS.html"><img src="Images/map-name-mirahq.jpg"></a>
-                <a href="MAPS.html"><img src="Images/map-name-airship.jpg"></a>
-                <span>Klikni pro zobrazení</span>
+            <div class="about-part">
+                <div class="about-text">
+                    <p>   
+                        <span class="red">Among Us je populární sociální dedukční hra,</span> která je určena pro skupiny hráčů
+                        o počtu 4-15. Ve hře je každému hráči náhodně přidělena role podvodníka, nebo role člena posádky.
+                    </p>
+                    <ul>
+                        <li>
+                            <span class="red">Podvodníci mají za úkol zůstat utajeni a sabotovat úkoly posádky.</span>
+                            Jejich cílem je eliminovat všechny členy posádky a nebýt chyceni.
+                            Musí strategicky plánovat své útoky a zároveň se vyhýbat podezření ostatních hráčů.
+                        </li>
+                        <li>
+                            <span class="red">Členové posádky mají za úkol vykonat všechny požadované úkoly na lodi a odhalit podvodníky.</span>
+                            Aby přežili, musí spolupracovat, komunikovat a hlasovat o podezřelých hráčích na základě pozorování a dedukce.
+                            Důvěra mezi členy posádky je klíčová k vítězství
+                        </li>
+                    </ul>
+                    <p>
+                        <span class="red">Among Us je napínavá hra plná tajemství,</span> podezření a strategie, která vyžaduje dobré deduktivní schopnosti a
+                        schopnost spolupracovat s ostatními hráči.
+                    </p>
+                </div>
+                <img src="Images/among-us-theme.jpg">
             </div>
-            <div class="roles">
-                <h2 class="red">Speciální role</h2>
-                <div class="role">
-                    <img src="Images/icon-engineer.jpg">
+            <div class="grid-container">
+                <div class="maps">
+                    <h2 class="red">Hratelné mapy</h2>
                     <p>
-                        <span class="red">Inženýr</span> má schopnost používat ventilace stejně jako podvodník, ale jenom párkrát a na omezenou dobu.
+                        Hra se odehrává na jedné ze čtyř map:
                     </p>
+                    <a href="MAPS.html"><img src="Images/map-name-skeld.jpg"></a>
+                    <a href="MAPS.html"><img src="Images/map-name-polus.png"></a>
+                    <a href="MAPS.html"><img src="Images/map-name-mirahq.jpg"></a>
+                    <a href="MAPS.html"><img src="Images/map-name-airship.jpg"></a>
+                    <span>Klikni pro zobrazení</span>
                 </div>
-                <div class="role-reverse">
-                    <img src="Images/icon-shift.jpg">
-                    <p>
-                        <span class="red">Proměňovač</span> speciální role podvodníka umožňující převzít vzhled kolemdoujícího člena posádky.
-                    </p>
+                <div class="roles">
+                    <h2 class="red">Speciální role</h2>
+                    <div class="role">
+                        <img src="Images/icon-engineer.jpg">
+                        <p>
+                            <span class="red">Inženýr</span> má schopnost používat ventilace stejně jako podvodník, ale jenom párkrát a na omezenou dobu.
+                        </p>
+                    </div>
+                    <div class="role-reverse">
+                        <img src="Images/icon-shift.jpg">
+                        <p>
+                            <span class="red">Proměňovač</span> speciální role podvodníka umožňující převzít vzhled kolemdoujícího člena posádky.
+                        </p>
+                    </div>
+                    <div class="role">
+                        <img src="Images/icon-protect.jpg">
+                        <p>
+                            <span class="red">Anděl strážný</span> role ducha dovolující zachránit stále živého člena před podvodníkem.
+                        </p>
+                    </div>
+                    <div class="role-reverse">
+                        <img src="Images/icon-vitals.jpg">
+                        <p>
+                            <span class="red">Vědec</span> má k dispozici přenosný tablet, kde sleduje životní funkce svých kolegů. Je ale na baterky.
+                        </p>
+                    </div>
                 </div>
-                <div class="role">
-                    <img src="Images/icon-protect.jpg">
-                    <p>
-                        <span class="red">Anděl strážný</span> role ducha dovolující zachránit stále živého člena před podvodníkem.
-                    </p>
-                </div>
-                <div class="role-reverse">
-                    <img src="Images/icon-vitals.jpg">
-                    <p>
-                        <span class="red">Vědec</span> má k dispozici přenosný tablet, kde sleduje životní funkce svých kolegů. Je ale na baterky.
-                    </p>
+                <div class="benefits">
+                    <h2 class="red">Benefity hraní Among us</h2>
+                    <ul>
+                        <li>Vznik mnohočetné osobnosti</li>
+                        <li>Schopnost výborné dedukce</li>
+                        <li>Porozumění rozdílu mezi slovy argumenty a ambice</li>
+                        <li>Pochopení universa: <a href="LIFE.html">[Sussiverse]</a></li>
+                        <li>Připojení do sekty AMOGŮ věřící v boha ZAFODUSE</li>
+                        <li>Nakažení nemoci <a href="GOD.html">[SUSSED]</a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="benefits">
-                <h2 class="red">Benefity hraní Among us</h2>
-                <ul>
-                    <li>Vznik mnohočetné osobnosti</li>
-                    <li>Schopnost výborné dedukce</li>
-                    <li>Porozumění rozdílu mezi slovy argumenty a ambice</li>
-                    <li>Pochopení universa: <a href="LORE.html">[Sussiverse]</a></li>
-                    <li>Připojení do sekty AMOGŮ věřící v boha ZAFODUSE</li>
-                    <li>Nakažení nemoci <a href="GOD.html">[SUSSED]</a></li>
-                </ul>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <h2>Copyright 2023</h2>
-        <h2>Made by Šimon Frőmel, 2.E</h2>
-    </footer>
-</body>
+        </main>
+        <footer>
+            <h2>Copyright 2023</h2>
+            <h2>Made by Šimon Frőmel, 2.E</h2>
+        </footer>
+    </body>
 </html>
