--- a/A M O G U S/GOD.html
+++ b/A M O G U S/GOD.html
@@ -1,88 +1,89 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="GOD.css">
-    <title>O bohovi</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <a href="HOME.html"><img src="Images/LilAmogus.png"></a>
-        </nav>
-        <h1><pre>K  D  O     J  E     O  P  R  A  V  D  O  V  Ý       B  Ů  H</pre></h1>
-    </header>
-    <main>
-        <div class="left-side">
-            <div class="god">
-                <h2>Bůh Amogů</h1>
-                <img src="Images/Godissus.jpg">
-                <h3>Zafodus</h3>
-                <p>Bůh má mnoho jmen, mezi nejznámější patří: 
-                    <span class="sus">SusGod</span>, <span class="sus">God of Sus</span>, 
-                    <span class="sus">AmoGod</span>, <span class="sus">S U S</span>,
-                    <span class="sus">Godus</span>, <span class="sus">Godissus</span>
-                    a z historie od vzniku Sussiverse taktéž nazývaný jako 
-                    <span class="sus">Medjed</span>. Někdy je také znán pod iniciály HH, zatím se ale nikomu nepovelo rozluštit co znamenají tyto iniciály.
-                    Nejčastěji ale nazýván jako <span class="sus">Zafodus</span>.
-                </p>
-            </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="Images/LilAmogus.png" type="image/x-icon">
+        <link rel="stylesheet" href="GOD.css">
+        <title>O bohovi</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <a href="HOME.html"><img src="Images/LilAmogus.png"></a>
+            </nav>
+            <h1><pre>K  D  O     J  E     O  P  R  A  V  D  O  V  Ý       B  Ů  H</pre></h1>
+        </header>
+        <main>
+            <div class="left-side">
+                <div class="god">
+                    <h2>Bůh Amogů</h1>
+                    <img src="Images/Godissus.jpg">
+                    <h3>Zafodus</h3>
+                    <p>Bůh má mnoho jmen, mezi nejznámější patří: 
+                        <span class="sus">SusGod</span>, <span class="sus">God of Sus</span>, 
+                        <span class="sus">AmoGod</span>, <span class="sus">S U S</span>,
+                        <span class="sus">Godus</span>, <span class="sus">Godissus</span>
+                        a z historie od vzniku Sussiverse taktéž nazývaný jako 
+                        <span class="sus">Medjed</span>. Někdy je také znán pod iniciály HH, zatím se ale nikomu nepovelo rozluštit co znamenají tyto iniciály.
+                        Nejčastěji ale nazýván jako <span class="sus">Zafodus</span>.
+                    </p>
+                </div>
 
-            <div class="powers">
-                <h2>Zafodusovy síly</h2>
-                <img src="Images/susmantransfer.png">
-                <p>
-                    Zafodus je stvořitelem nákazy <span class="sus">SUSSED</span>. Dokáže nakazit <span class="sus">Susmana</span> (lidský obyčejný obyvatel Země),
-                    který se náhle promění na <span class="sus">Amoguse</span>. Tato proměna je nevratná a nezastavitelná. Jediným omezením je
-                    že jedinec musí alespoň jedenkrát odehrát hru Among us a někoho podezřívat. 
-                    Tato proměna zahrnuje jak tělesnou změnu, tak změnu v chování. Již proměněný jedinec není schopný 
-                    komunikovat bez zahrnutí slova <span class="sus">sus</span> do každé věty. Tyto bytosti již nežijí na Zemi ale na místě zvaném <span class="sus">Amgo</span>.
-                </p>
+                <div class="powers">
+                    <h2>Zafodusovy síly</h2>
+                    <img src="Images/susmantransfer.png">
+                    <p>
+                        Zafodus je stvořitelem nákazy <span class="sus">SUSSED</span>. Dokáže nakazit <span class="sus">Susmana</span> (lidský obyčejný obyvatel Země),
+                        který se náhle promění na <span class="sus">Amoguse</span>. Tato proměna je nevratná a nezastavitelná. Jediným omezením je
+                        že jedinec musí alespoň jedenkrát odehrát hru Among us a někoho podezřívat. 
+                        Tato proměna zahrnuje jak tělesnou změnu, tak změnu v chování. Již proměněný jedinec není schopný 
+                        komunikovat bez zahrnutí slova <span class="sus">sus</span> do každé věty. Tyto bytosti již nežijí na Zemi ale na místě zvaném <span class="sus">Amgo</span>.
+                    </p>
+                </div>
+                <div class="info">
+                    <img src="Images/SUSSED.png">
+                    <h2>Nákaza SUSSED</h2>
+                    <p>
+                        <span class="sus">Sussed</span> je nemoc stvořena bohem Zafodus. Jde o plyn s náhlým účinkem proměnit Susmana na Amoguse. Je zvláštní že proměnění jedinci si nestěžují, nýbrž právě uctívají a děkují bohovi za jeho obrovskou velkorysost.
+                    </p>
+                </div>
+                <div class="disease">
+                    <h2>Chování způsobené nákazou SUSSED</h2>
+                    <ul>
+                        <li>Jedinec na vše ukazuje prstem a přitom řve: <span class="sus">"S U S"</span></li>
+                        <li>Jedinec trpí paranojou. Podle informací vidí ve všem <span class="sus">tvary Amoguse</span></li>
+                        <li>Jedinec nepředvídatelně vykřikuje tato slovní spojení: "<span class="sus">On se ventnul!</span>", "<span class="sus">To je SUS!</span>" "<span class="sus">Já nejsem SUS!</span>" "<span class="sus">Nemáš ambice!</span>"</li>
+                    </ul>
+                </div>
+                <div class="behavior">
+                    <h2>Jak se chránit a co dělat</h2>
+                    <p class="sus">Jediná prevence je ... se vyhýbat sus lidem</p>
+                    <p>Pokud u sebe nacházíte podobné chování, tak prosím neodkladně kontaktuje policii (doktor vám již nepomůže).</p>
+                    <p>Pokud si všimnete někoho kdo kolem sebe vyvolává podobné chování, tak se mu prosím nesnažte pomoc a raději si držte odstup od jedince a kontaktujte neodkladně policii.</p>
+                </div>
             </div>
-            <div class="info">
-                <img src="Images/SUSSED.png">
-                <h2>Nákaza SUSSED</h2>
-                <p>
-                    <span class="sus">Sussed</span> je nemoc stvořena bohem Zafodus. Jde o plyn s náhlým účinkem proměnit Susmana na Amoguse. Je zvláštní že proměnění jedinci si nestěžují, nýbrž právě uctívají a děkují bohovi za jeho obrovskou velkorysost.
-                </p>
+            <div class="right-side">
+                <h1>DESATERO PŘIKÁZÁNÍ</h1>
+                <div class="list">
+                    <div>Bůh nikdy neplynuje, ikdyž je absolutně přeplynován!</div>
+                    <div>Bůh si vždy po náročném dni dá Lidl zmrzlinu!</div>
+                    <div>Bůh si vždycky najde čas k sebeuspokojení!</div>
+                    <div>Božská špína mezi prsty je ta nejchutnější!</div>
+                    <div>Božské ochlupení je vždy nejvoňavější!</div>
+                    <div>Bohovy by se nikdy neprotrhla guma!</div>
+                    <div>Božské svaly jsou ty nejobjemnější!</div>
+                    <div>Bohovy nikdy nesmrdí chodidla!</div>
+                    <div>Bůh nikdy nechodí Leg day!</div>
+                    <div>Ben!</div>
+                    <!--Pokud zbyde čas, tak udělat aby při najetí myši na jednotlivé 
+                        prvky se přehrál soubor mého hlasu opakující tuto větu :)-->
+                </div>
             </div>
-            <div class="disease">
-                <h2>Chování způsobené nákazou SUSSED</h2>
-                <ul>
-                    <li>Jedinec na vše ukazuje prstem a přitom řve: <span class="sus">"S U S"</span></li>
-                    <li>Jedinec trpí paranojou. Podle informací vidí ve všem <span class="sus">tvary Amoguse</span></li>
-                    <li>Jedinec nepředvídatelně vykřikuje tato slovní spojení: "<span class="sus">On se ventnul!</span>", "<span class="sus">To je SUS!</span>" "<span class="sus">Já nejsem SUS!</span>" "<span class="sus">Nemáš ambice!</span>"</li>
-                </ul>
-            </div>
-            <div class="behavior">
-                <h2>Jak se chránit a co dělat</h2>
-                <p class="sus">Jediná prevence je ... se vyhýbat sus lidem</p>
-                <p>Pokud u sebe nacházíte podobné chování, tak prosím neodkladně kontaktuje policii (doktor vám již nepomůže).</p>
-                <p>Pokud si všimnete někoho kdo kolem sebe vyvolává podobné chování, tak se mu prosím nesnažte pomoc a raději si držte odstup od jedince a kontaktujte neodkladně policii.</p>
-            </div>
-        </div>
-        <div class="right-side">
-            <h1>DESATERO PŘIKÁZÁNÍ</h1>
-            <div class="list">
-                <div>Bůh nikdy neplynuje, ikdyž je absolutně přeplynován!</div>
-                <div>Bůh si vždy po náročném dni dá Lidl zmrzlinu!</div>
-                <div>Bůh si vždycky najde čas k sebeuspokojení!</div>
-                <div>Božská špína mezi prsty je ta nejchutnější!</div>
-                <div>Božské ochlupení je vždy nejvoňavější!</div>
-                <div>Bohovy by se nikdy neprotrhla guma!</div>
-                <div>Božské svaly jsou ty nejobjemnější!</div>
-                <div>Bohovy nikdy nesmrdí chodidla!</div>
-                <div>Bůh nikdy nechodí Leg day!</div>
-                <div>Ben!</div>
-                <!--Pokud zbyde čas, tak udělat aby při najetí myši na jednotlivé 
-                    prvky se přehrál soubor mého hlasu opakující tuto větu :)-->
-            </div>
-        </div>
-    </main>
-    <footer>
-        <h2>Copyright 2023</h2>
-        <h2>Made by Šimon Frőmel, 2.E</h2>
-    </footer>
-</body>
+        </main>
+        <footer>
+            <h2>Copyright 2023</h2>
+            <h2>Made by Šimon Frőmel, 2.E</h2>
+        </footer>
+    </body>
 </html>
