--- a/A M O G U S/HOME.html
+++ b/A M O G U S/HOME.html
@@ -1,39 +1,40 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="HOME.css">
-    <title>Among us</title>
-</head>
-<body>
-    <header>
-        <h1><pre>A      M      O      N      G      U      S</pre></h1>
-    </header>
-    <main>
-        <nav>
-            <a href="GAME.html" class="tab">
-                <span>ABOUT THE GAME</span>
-            <a href="GOD.html" class="tab">
-                <span>THEIR GOD</span> 
-            </a>
-            <a href="IMPOSTOR.html" class="tab">
-                <span>IMPOSTOR DETECTOR</span> 
-            </a>
-            <a href="LORE.html" class="tab">
-                <span>THEIR LORE</span>
-            </a>
-        </nav>
-        <div class="HOME_button">
-            <a href="HOME.html">
-                <img src="Images/LilAmogus.png">
-            </a>
-            <p>This LiLAMOGUS will always get you back safe here</p>    
-        </div>
-    </main>
-    <footer>
-        <h2>Copyright 2023</h2>
-        <h2>Made by Šimon Frőmel, 2.E</h2>
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="Images/LilAmogus.png" type="image/x-icon">
+        <link rel="stylesheet" href="HOME.css">
+        <title>Among us</title>
+    </head>
+    <body>
+        <header>
+            <h1><pre>A      M      O      N      G      U      S</pre></h1>
+        </header>
+        <main>
+            <nav>
+                <a href="GAME.html" class="tab">
+                    <span>ABOUT THE GAME</span>
+                <a href="GOD.html" class="tab">
+                    <span>THEIR GOD</span> 
+                </a>
+                <a href="IMPOSTOR.html" class="tab">
+                    <span>IMPOSTOR DETECTOR</span> 
+                </a>
+                <a href="LIFE.html" class="tab">
+                    <span>AMOGUS´s LIFE</span>
+                </a>
+            </nav>
+            <div class="HOME_button">
+                <a href="HOME.html">
+                    <img src="Images/LilAmogus.png">
+                </a>
+                <p>This LiLAMOGUS will always get you back safe here</p>    
+            </div>
+        </main>
+        <footer>
+            <h2>Copyright 2023</h2>
+            <h2>Made by Šimon Frőmel, 2.E</h2>
+        </footer>
+    </body>
 </html>
