--- a/A M O G U S/IMPOSTOR_FALSE.html
+++ b/A M O G U S/IMPOSTOR_FALSE.html
@@ -1,13 +1,14 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="IMPOSTOR_SUS.css">
-    <title>You can click off</title>
-</head>
-<body>
-    <audio src="Sounds/AMOGUS_voting_sound.mp3" autoplay loop></audio>
-    <img src="Gifs/FALSEImpostor.gif">
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="Images/LilAmogus.png" type="image/x-icon">
+        <link rel="stylesheet" href="IMPOSTOR_SUS.css">
+        <title>You can click off</title>
+    </head>
+    <body>
+        <audio src="Sounds/AMOGUS_voting_sound.mp3" autoplay loop></audio>
+        <img src="Gifs/FALSEImpostor.gif">
+    </body>
 </html>
