--- a/A M O G U S/LIFE.html
+++ b/A M O G U S/LIFE.html
@@ -12,10 +12,9 @@
             <nav>
                 <a href="HOME.html"><img src="Images/LilAmogus.png"></a>
             </nav>
-            <h1><pre>Život Amoguse</pre></h1>
+            <h1><pre>Ž I V O T   A M O G U S E</pre></h1>
         </header>
         <main>
-
             <div class="who-is-amogus">
                 <p>
                     Amogus je bytost žijící na místě zvaném Amgo.
@@ -45,9 +44,9 @@
                         <p>
                             Rovnou v historii přeskočíme na nejvýznamějšího Amoguse, a tím je <span class="sus">Adolfus Susler</span>. Byl to velmi <span class="sus">sus</span> diktátor.
                             V historii vývoje Amogusů sehrál velkou roli v bodobě <span class="sus">sus</span> překážky. Figuroval ve válce <span class="sus">"The Great Sus War"</span>, tu nakonec bohužel prohrál.
-                            Z toho je jasný jeho způsob doruzomívání, <span class="sus">jeho oponenti začínali dýcháním plynu a končili na hromádce</span>j.
+                            Z toho je jasný jeho způsob doruzomívání, <span class="sus">jeho oponenti začínali dýcháním plynu a končili na hromádce</span>.
                             Jeho zbraní byl plyn, který s jeho kamarádem <span class="sus">Sussolini</span> vytvořili ve svém brzkém mládí. 
-                            Ačkoliv se inspirovali bohem Zafoduse a jeho nákazou <a href="GOD.html">[Sussed]</a>, bohužel se jim to nepodařilo stvořit.
+                            Ačkoliv se inspirovali bohem Zafoduse, tak nedokázali dosáhnout stejného efektu jako plyn <a href="GOD.html">[Sussed]</a>.
                         </p>
                     </div>
                     <div class="system">
@@ -64,12 +63,13 @@
                         <img src="Images/Sussy_measurer.png">
                         <h3>Sussy Measurer</h3>
                         <p>
-                            Jde o přístroj schopný měřit hodnotu <span class="sus">susáctví</span>, pozor ale na objekty vyzařující tak vysoké hodnoty <span class="sus">sus</span>
-                            , jinak by se přístroj nezvratně rozbil a nabil by té největší sus hodnoty co existuje, překonal by i <span class="sus">Amosuse</span>, což je <span class="sus">Susman</span>,
-                            který je tak moc <span class="sus">sus</span>, že se <span class="sus">vysusoval</span> ze <span class="sus">sussiversu</span>.
+                            Jde o přístroj schopný měřit hodnotu <span class="sus">susáctví</span>, pozor ale na objekty vyzařující tak vysoké hodnoty <span class="sus">sus</span>,
+                            jinak by se přístroj nezvratně rozbil a nabil by té největší sus hodnoty co existuje, překonal by i <span class="sus">Amosuse</span>, což je <span class="sus">Susman</span>,
+                            který je tak moc <span class="sus">sus</span>, že se <span class="sus">vysusoval</span> až ze <span class="sus">Sussiversu</span>.
                         </p>
                     </div>
                 </div>
+
                 <div>
                     <div class="problems">
                         <h2>Fakta o bytosti Amogus</h2>
@@ -111,8 +111,8 @@
                             <img src="Images/Amonila.png">
                             <h3>Amoňila</h3>
                             <p>
-                                Amoňila je dcera <span class="sus">Gipsy Chipsy Kinga</span>, starosty <span class="sus">susměsta</span>.
-                                Vše co řekne platí a má velkou autoritu, mezi dalšími <span class="sus">Amogusy</span>.
+                                Amoňila je dcera <span class="sus">Gipsy Chipsy Kinga</span>, starosta <span class="sus">susměsta</span>.
+                                Vše co řekne platí, mezi dalšími <span class="sus">Amogusy</span> má velkou autoritu.
                                 <span class="sus">Gipsy Chipsy King</span> je velký a objemný, a jeho nejoblíbenější sváčou jsou suschipsy.
                             </p>
                         </div>
